Changed API, added exampels

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,13 +4,16 @@ lint=flake8
 
 [tool:pytest]
 addopts =
-    --cov=xdmenu
+    --cov-report term
+    --cov-report html:build/reports/coverage_html
+    --cov-report xml:build/reports/coverage.xml
+    --cov=pymenu
     --verbose
     --flake8
     --doctest-modules
 testpaths =
     tests
-    xdmenu
+    pymenu
 norecursedirs = .svn _build tmp*
 
 [flake8]
@@ -26,22 +29,17 @@ exclude =
     # This contains distribution that we don't want to check
     dist,
     # The command line entry point script is expected to fail some checks
-    __main__.py,
-    # The root __init__ is expected to fail some checks
-    xdmenu/__init__.py
+    __main__.py
 show-source = True
 doctests = True
 
 [isort]
 from_first = 1
 known_standard_library = setuptools
-known_third_party =
-    flask_ripozo,
-    ripozo
 known_first_party = ""
 
 [sdist]
 formats=gztar,zip
 
 [bdist_wheel]
-python-tag=py35
+universal = 1
