--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,14 @@
 [tox]
-indexserver =
-    DEV = extra_index_url
+envlist = py27, py33, py34, py35, pypy, pypy3
+
+
 
 [testenv]
+passenv = TOXENV CI TRAVIS TRAVIS_*
 deps =
-    docutils        # comes from standard PyPI
-    :DEV:mypackage  # will be installed from custom "DEV" pypi url
+    -rrequirements_dev.txt
+    codecov>=1.4.0
+
+commands =
+    pytest --basetemp={envtmpdir}
+    codecov -e TOXENV
